<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_black">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_20"
        android:src="@drawable/food_bck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_type"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_5"
        android:background="@drawable/round_edge"
        android:gravity="center"
        android:textColor="@color/colorGold"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="@id/lbl_type"
        app:layout_constraintTop_toBottomOf="@id/lbl_type"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_price"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_5"
        android:background="@drawable/round_edge"
        android:gravity="center"
        android:inputType="number"
        android:textColor="@color/colorGold"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="@id/lbl_price"
        app:layout_constraintTop_toBottomOf="@id/lbl_price"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/lbl_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:text="@string/txt_what"
        android:textColor="@color/colorGold"
        android:textSize="@dimen/dimen_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_pgTitle" />

    <TextView
        android:id="@+id/tv_selectPeople"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_10"
        android:background="@drawable/round_edge"
        android:gravity="center"
        android:text="@string/txt_selectPeople"
        android:textColor="@color/colorGold"
        android:textSize="@dimen/dimen_14"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="@id/lbl_price"
        app:layout_constraintTop_toBottomOf="@id/et_price"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/lbl_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:text="@string/txt_price"
        android:textColor="@color/colorGold"
        android:textSize="@dimen/dimen_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_type" />

    <TextView
        android:id="@+id/tv_addNewBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dimen_10"
        android:background="@drawable/round_edge"
        android:gravity="center"
        android:text="@string/txt_addNewButton"
        android:textColor="@color/colorGold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/tv_calculateBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dimen_10"
        android:background="@drawable/round_edge"
        android:gravity="center"
        android:text="@string/txt_calculateButton"
        android:textColor="@color/colorGold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/tv_selectedPeopleList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_10"
        android:text="@string/txt_selectedPeople"
        android:textColor="@color/colorGold"
        android:textSize="@dimen/dimen_15"
        app:layout_constraintBottom_toTopOf="@id/tv_addNewBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_selectPeople" />

    <com.doublep.splitter.customViews.TextViewRestOfAllBold
        android:id="@+id/lbl_pgTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_details"
        android:textColor="@color/colorGold"
        android:textSize="@dimen/dimen_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>